# gitlfs-gui-by-sea5kg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_simple.sh  resources.qrc
res/: app-icon.xcf
src/: app_config.cpp  app_config.h  main.cpp  mainwindow.cpp  mainwindow.h
src/interfaces/: inotify_service.h
